# atv

./: README.md  pyproject.toml
.github/workflows/: determine_version.py  workflow.yml
atv/: __about__.py
taskscope/: __init__.py  __main__.py  app.py  cli.py
