[project]
name = "atv"
version = "0.1.2"
description = "atv(async task viewer): a TUI tool for experimenting with Python 3.14 asyncio ps/pstree features"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=0.57,<0.61",
    "psutil>=5.9",
]

[project.urls]
Repository = "https://github.com/jrfk/atv"

[project.scripts]
atv = "atv.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "atv"
module-root = ""
